# openfoam-mcp

./: .gitignore  DIAGNOSTIC.md  GITHUB_SETUP.md  HOW_TO_ACCESS.md  LICENSE  MUST_READ_FIRST.md  PUSH_TO_GITHUB.sh  QUICKSTART.md  README.md  REAL_ANALYZER_COMPLETE.md  TEST_RESULTS.md  UPDATE_GUIDE.md  WSL2_SETUP.md  pyproject.toml  requirements.txt  restart_mcp.sh  run_mcp_server.py  verify_simple.sh  verify_wsl2_setup.sh
docs/: getting_started.md
examples/: simple_mold_filling.md  solidification_analysis.md
openfoam_mcp/: __init__.py  server.py
openfoam_mcp/api/: __init__.py  case_manager.py  openfoam_client.py  parametric_study.py  result_analyzer.py  result_analyzer_real.py
openfoam_mcp/builders/: __init__.py  case_builder.py  templates.py
openfoam_mcp/utils/: __init__.py  field_parser.py
tests/: test_case_manager.py  test_comprehensive.py  test_real_analyzer.py
venv_wsl/: pyvenv.cfg
